# photo-sovereignty

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  config.example.yaml  config.yaml  extract_gps.py  process_photos.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
data/sample_photos/: IMG_2990.HEIC  IMG_3382.HEIC  IMG_3630.HEIC
dev_tools/: consolidate_photo_details.py  extract_labeled_photos.py  inspect_db.py
docs/public/: blueprint.md
examples/: README.md  stage1_process_photos.py  stage2_extract_gps.py
orchestration/: README.md  stage1_process_photos.py  stage2_extract_gps.py
src/: config.py  database.py  exif_extractor.py  exif_parser.py  gps_extractor.py  organize.py  photo_details_parser.py
tests/: __init__.py  conftest.py  query_database.py  query_gps.py  test_config.py  test_database.py  test_detailed_exif_inspection.py  test_exif_parser.py  test_gps_extractor.py  test_gps_manual.py  test_photo_details_parser.py
tests/archive/: README.md  query_database.py  query_gps.py  test_detailed_exif_inspection.py  test_gps_manual.py
